# spotify-to-youtube-music

./: .env.example  .gitignore  README.md  pyproject.toml  setup_music_transfer.py  spotify_to_youtube_music.py
